# HockeyShot

./: CMakeLists.txt  README.md  package.xml
cfg/: HockeyShot.cfg
launch/: hockey_shot.launch  hockey_shot_bags.launch  kinect_driver.launch
rviz/: hockey_shot.rviz
src/: hockey_shot.cpp  hockey_shot.h  main.cpp
