<?xml version="1.0"?>
<package format="2">
  <name>hockey_shot</name>
  <version>0.0.0</version>
  <description>
    Xbox 360 kinect hockey shot 
  </description>
  <maintainer email="bengrudz88@gmail.com">Ben Grudzien</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>pcl_conversions</depend>
  <depend>ugv_course_libs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_ros</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>

</package>
